# shopwired-mcp-server

./: CLAUDE.md  README.md
docs/: index.html
shopwired-mcp-server/: .dockerignore  .env.example  .gitignore  BUNDLE_README.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  INSTALL.md  PERMISSIONS.md  README.md  install.bat  install.sh  make-bundle.sh  pyproject.toml
shopwired-mcp-server/shopwired-fixes/: HOW_TO_APPLY.md
shopwired-mcp-server/shopwired-fixes/tools/: customers.py  orders.py  products.py  store.py
shopwired-mcp-server/shopwired-fixes/utils/: formatting.py
shopwired-mcp-server/src/shopwired_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  server.py
shopwired-mcp-server/src/shopwired_mcp/tools/: __init__.py  customers.py  orders.py  products.py  store.py
shopwired-mcp-server/src/shopwired_mcp/utils/: __init__.py  cache.py  formatting.py  rate_limiter.py
shopwired-mcp-server/tests/: conftest.py  test_auth.py  test_cache.py  test_client.py  test_formatting.py  test_rate_limiter.py
shopwired-skills/b2b-wholesale-routing/: SKILL.md
shopwired-skills/customer-segment-intelligence/: SKILL.md
shopwired-skills/inventory-decision-engine/: SKILL.md
shopwired-skills/multi-channel-sync-governance/: SKILL.md
shopwired-skills/onboarding-store-setup/: SKILL.md
shopwired-skills/order-lifecycle-management/: SKILL.md
shopwired-skills/pricing-promotion-guard/: SKILL.md
shopwired-skills/product-catalog-quality/: SKILL.md
shopwired-skills/reporting-and-insight-framing/: SKILL.md
shopwired-skills/store-intelligence-core/: SKILL.md
