[project]
name = "shopwired-mcp-server"
version = "0.1.0"
description = "MCP server for ShopWired e-commerce platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0,<2",
    "httpx>=0.27.0,<1",
    "pydantic>=2.0.0,<3",
    "pydantic-settings>=2.6.1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<10",
    "pytest-asyncio>=0.23.0,<2",
    "pytest-cov>=5.0.0,<8",
    "ruff>=0.4.0,<1",
    "mypy>=1.10.0,<2",
    "respx>=0.21.0,<1",
]

[project.scripts]
shopwired-mcp = "shopwired_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shopwired_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
